--- a/Events.html
+++ b/Events.html
@@ -224,7 +224,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div  data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <a href="valorant.html"><img src="img/performer/3.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Valorant</h4>
@@ -235,7 +235,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/4.png" alt="">
+                                    <a href="bgmi.html"><img src="img/performer/4.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>BGMI</h4>
