--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Treasure Hunt</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
