--- a/facepainting.html
+++ b/facepainting.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">“Face painting</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,42 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >"Explore the colorful world of face painting at our event! Join us for a day filled with 
+                            creativity and fun as talented artists transform faces into vibrant works of art. Whether you're 
+                            a participant or spectator, immerse yourself in this unique celebration of artistic expression 
+                            and community joy."
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li> **Event Duration**: The event spans 2 days.</li>
+                        <li>**Day 1 - Free Theme**: Create any face painting design based on your chosen theme. 
+                            Be creative and original. </li>
+                        <li>**Day 2 - Surprise Theme**: Paint according to a surprise theme announced at the start 
+                            of the day. Show creativity within the given theme.</li>
+                        <li>**Materials**: Bring your own skin-safe, non-toxic face painting supplies. </li>
+                        <li>**Timing**: Paint within specified time frames each day. </li>
+                        <li>**Health and Safety**: Only use face paints and cosmetic-grade glitters that are 
+                            specifically designed for use on skin. Avoid craft paints or other non-cosmetic products.
+                            </li>
+                        <li>**Participation**: Pre-registration required; attendance both days mandatory for 
+                            overall prizes.</li>
+                        <li>**Conduct**: Respect others; inappropriate behavior leads to disqualification.</li>
+                        <li>**Compliance**: Follow all event rules; non-compliance results in disqualification.</li>
+                        <li>**Judging and Prizes**: Evaluation based on creativity, Judges' decisions are final and 
+                            binding.</li>
+                        <li>Note:- All team must have 2 members. • Each participates should bring His/Her own 
+                            painting supplies ,including paints ,brush, water container and other tools and supplies 
+                            necessary to complete the task </li>
                     </ul></div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Santhosh yanni – 7760417600</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Bushan - 8495942560</p>
                     </div>
 
                 </div>
@@ -144,8 +153,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf24E_Xj0O9oDtD7a-JG1U-3MRQtJumTxeqHCXUEk_hfq9UHQ/viewform?embedded=true" width="640" height="2245" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
