--- a/bgmi.html
+++ b/bgmi.html
@@ -117,9 +117,9 @@
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Kedar Naik: 9972584886</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Siddu Meti: 9113030906</p>
                     </div>
 
                 </div>
@@ -136,11 +136,11 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdkeGVGHGsPn0qckXzE5rtxbpejHhOO3L3ORH0EVK0LVUfzQw/viewform?embedded=true"frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                     
+                           </div>
                 </div>
             </div>
-          
+            </div>
         </div>
     </div>
     <!-- performar_area_end  -->
