--- a/webcraft_studio.html
+++ b/webcraft_studio.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Webcraft Studio</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,48 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >"WEB STUDIO " is an exhilarating web design competition that 
+                            challenges participants to create stunning, functional websites 
+                            within a limited timeframe. Participants will showcase their 
+                            creativity, technical skills, and innovative thinking in a race against 
+                            the clock. This event is designed to test and expand the boundaries of 
+                            web design, pushing participants to deliver their best work under 
+                            pressure. 
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li>The participants must be register for the specific event. </li>
+                        <li>Event begins at exactly 10.00 AM and Ends at 12:30 PM. So, kindly do 
+                            report before 9:45. </li>
+                        <li>A team shall consist of a maximum of 2 members. </li>
+                        <li>There will be a total of 2 rounds. </li>
+                        <li>The detailed rules of the round will be given by the coordinators 
+                            before the round starts. </li>
+                        <li>The organizing team reserves the right to make changes to certain 
+                            rules. </li>
+                        <li> The theme or topic will be announced by the coordinator.<br> 
+                            1. Event consist of 2 rounds <br>
+                            I.Web quiz <br>
+                            II.Designing the web page  </li>
+                        <li>All work must be original and created during and the event. No 
+                            pre mode templates or previously developed code allowed 
+                            (Shouldn’t be borrowed from AI tools or Website).  </li>
+                        <li> Ensure all content is appropriate and does not violet any 
+                            copyright laws.  </li>
+                        <li>Electronics Gadgets are strictly prohibited.No personal laptops 
+                            are allowed </li>
+                        <li>  Online registration will be closed by 30/05/2024- 9pm or On 
+                            spot registration is also available till 9:30Pm on 31/05/2024  </li>
                     </ul></div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Jyoti Kambar : 8431339711 </p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Raj Mange: 9980113561</p>
                     </div>
 
                 </div>
@@ -144,8 +159,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpsXvfgHp1g7firwftuHKO4H-FI8Q4kzb6ciWkXGGQ4bLdVw/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
