--- a/Events.html
+++ b/Events.html
@@ -117,33 +117,55 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <a href="webcraft_studio.html"><img src="img/performer/2.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Webcraft Studio</h4>
+                                    <span>CSE Department</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                                <div data-tilt class="thumb">
+                                    <a href="sharktank.html"><img src="img/performer/2.png" alt=""></a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Shark Tank</h4>
+                                    <span>EC Department</span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div  data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <a href="catch_me.html"><img src="img/performer/3.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Catch Me If You Can</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/4.png" alt="">
+                                    <a href="debate.html"><img src="img/performer/4.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Debate</h4>
+                                    <span>CSE Department</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div data-tilt class="thumb">
+                                    <a href="presentation.html"><img src="img/performer/4.png" alt=""></a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Scholarly Discourse Gala</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
@@ -165,21 +187,21 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="valorant.html"><img src="img/performer/1.png" alt=""></a>
+                                    <a href="slowbike.html"><img src="img/performer/1.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Slow Bike Racing</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <a href="classroomcricket.html"><img src="img/performer/2.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
+                                    <h4>Class Cricket</h4>
                                     <span>event description</span>
                                 </div>
                             </div>
@@ -187,22 +209,22 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div  data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <a href="throwball.html"><img src="img/performer/3.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Throwball</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/4.png" alt="">
+                                    <a href="classroomcricket.html"><img src="img/performer/4.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Classroom Cricket</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
@@ -261,22 +283,22 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="valorant.html"><img src="img/performer/1.png" alt=""></a>
+                                    <a href="gaanasudhe.html"><img src="img/performer/1.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Gaanasudhe</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <a href="bohorythm.html"><img src="img/performer/2.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Event Name</h4>
-                                    <span>event description</span>
+                                    <h4>Boho Rythm Quest</h4>
+                                    <span>CSE Department</span>
                                 </div>
                             </div>
                         </div>
