--- a/bohorythm.html
+++ b/bohorythm.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Boho Rythm Quest</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,46 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >"Groove & Wander" is a bohemian adventure, an odyssey of the spirit that 
+                            dances to its own beat. Here , the air is infused with the scent of wildflowers and the promise 
+                            of endless horizons. This is a place where the traveler becomes the artist, painting their path 
+                            with footsteps that echo with the rhythms of a nomadic heart.
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li>Each participant should carry college id.</li>
+                        <li>Students taking part in the event should register prior.On spot registrations are 
+                            available till 10.30 am.</li>
+                        <li>Participants are to be present at the event venue an hour before the start of the event.</li>
+                        <li>Participants should bring there tracks in a pendrive & must submit at the time of 
+                            verification. </li>
+                        <li>Each team will be given time slot of minimum 3 and maximum 6 minutes to 
+perform.(Including stage setup) </li>
+                        <li>The minimum number of participants on stage at any time of the performance is 4, 
+                            and maximum number of participants per team is 8, plus a maximum number of 2 
+                            backstage helpers. </li>
+                        <li>Open to all theme categories (Indian mythology, Bolly-hop, Classical ,western).</li>
+                        <li>The act, performance and costumes should not hurt any cultural or religious 
+                            sentiments. </li>
+                        <li>Portrayal of any indecent gestures will lead to disqualification.</li>
+                        <li>Judge's decision will be final and binding on all participants. </li>
                     </ul></div>
+                    <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
+
+                        <h3>JUDGING CRITERIA</h3>
+                        <p>Tal, Technique, Rhythm, Expression, Costumes, Footwork, 
+                            Choreography, Music, Sync, Coordination, Props & Theme Depiction and General 
+                            Impression. </p>
+                     </div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Ruthika Savalagi: 8147803043 </p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Sakshi Patil: 9108425254 </p>
                     </div>
 
                 </div>
@@ -144,8 +157,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfhVctu5pLb4vAZLWxeL20odseS64SeDBMjlkQNNgbw3kbJlw/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
