--- a/gaanasudhe.html
+++ b/gaanasudhe.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Gaanasudhe</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,37 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Welcome to the musical extravaganza, where talent meets rhythm and passion harmonizes with melody! Gaanasudhe is not just a singing competition; it's a journey through the soulful realms of music, where voices transcend boundaries and emotions find expression in every note.
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li>Performance can be done in solo or group(min 2/max5). </li>
+                        <li>One will be given to set up groups. </li>
+                        <li>The duration for the performance in 4-5 minutes.</li>
+                        <li>Songs can be performed in any language. </li>
+                        <li>Participants should accompany their own instruments except Mics, jacks etc provided.</li>
+                        <li>Participants must provide any necessary technical equipment or props required for their performance</li>
                     </ul></div>
+                    <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
+
+                   <h3>JUDGING CRITERIA</h3>
+                    <ul class= "unordered-list" style="color: #AAB1B7;" >
+                        <li>Judging criteria includes vocal techniques, instruments technique/co-ordination, musicality, stage presence.</li>
+                        <li>Negative marking for exceeding or subceeding of time.</li>
+                    </ul>
+                    <h4>Entrance fee</h4>
+                    <p>Solo: ₹100</p>
+                    <p>Group: ₹300</p>
+                </div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Sarika alagouda patil   9880343885 </p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Siddappa Totager 8553601240</p>
                     </div>
 
                 </div>
@@ -144,8 +148,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIhqSJOh16eYOBjx_odhGA0PBuTm0PfRV6yvx3PJrimd9G8Q/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
