--- a/throwball.html
+++ b/throwball.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Throwball</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,31 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
+                        <li>Each team consists of 9 players, i.e., 5 girls and 4 boys</li>
+                        <li>The first team to score 15 points wins a set.</li>
+                        <li>Only the team serving can score a point.</li>
+                        <li>The service ball must not touch the net. Double touch is not allowed while receiving the service ball. </li>
+                        <li>The ball should not touch any part of the body other than the palm.</li>
                         <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
+                        <li>Two players cannot touch the ball simultaneously.</li>
+                        <li>The referee's decision is final.</li>
                         <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
+                        <li>8.Disrespect towards the referee or opposing team members will lead to disqualification.</li>
                         <li>For further enquiry contact coordinators </li>
                     </ul></div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Srushti Nirwani- 7411074485</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Deepa Itagi- 8861339691</p>
                     </div>
 
                 </div>
@@ -144,12 +142,13 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSedRSrz1eh43K-h8UsGyb8yaxKxy1liOKTFkHiN-wh39KSzaA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>     
+                         </div>
                 </div>
             </div>
           
         </div>
+    </div>
     </div>
     <!-- performar_area_end  -->
 
