--- a/Events.html
+++ b/Events.html
@@ -148,6 +148,17 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
+                                <div data-tilt class="thumb">
+                                    <a href="flyoverdesign.html"><img src="img/performer/2.png" alt=""></a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Flyover Design and Construction</h4>
+                                    <span>CIVIL Department</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
                                     <a href="debate.html"><img src="img/performer/4.png" alt=""></a>
@@ -165,6 +176,17 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Scholarly Discourse Gala</h4>
+                                    <span>CSE Department</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6">
+                            <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <div data-tilt class="thumb">
+                                    <a href="cadclash.html"><img src="img/performer/4.png" alt=""></a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>CAD Clash</h4>
                                     <span>CSE Department</span>
                                 </div>
                             </div>
