--- a/sharktank.html
+++ b/sharktank.html
@@ -125,6 +125,8 @@
                         <li>Marketing strategy</li>
                         <li>Investment potential</li>
                     </ul>
+                    <br>
+                    <br>
                     <h3>Registration Fees</h3>
                     <p>₹150 per Team</p> 
                     </div>
@@ -133,7 +135,7 @@
                         <br>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Anusha: 636-309-9981</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Amrut</p>: 861-880-1455</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Amrut: 861-880-1455</p>
                     </div>
 
                 </div>
