--- a/reelmaking.html
+++ b/reelmaking.html
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">BGMI</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Reel Making</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -102,24 +102,38 @@
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >
-                        </p>
+                            Reel making competition invites participants to showcase their creativity and storytelling skills by producing engaging and impactful reels</p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Teams need to be at the venue 30 minutes prior to the designated match start time for setup </li>
-                        <li>The lobby will be created by the organizers. </li>
-                        <li>There will be no availability of wifi  at the venue.</li>
-                        <li>To avoid delays in the program of the event, delays caused by players will lead to disqualification for the entire team. </li>
-                        <li>Violation or not following any of the rules, regulations, terms and conditions will result to penalties or disqualifications </li>
+                        <li>Each reel must be between 30 to 45 seconds long.</li>
+                        <li>3-4 persons can be participate.</li>
+                        <li>The reel must be align with the competition’s theme, which will be announced at the start of the event.</li>
+                        <li>Content must be original and created during the competition timeframe.</li>
+                        <li>Reel must be appropriate for all audiences, avoiding any offensive or inappropriate material.</li>
+                        <li>Late submission, any form of plagiarism or use of pre-existing content will result in disqualification.</li>
                     </ul></div>
+                    <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
+                        <h3>Judging Criteria</h3>
+                        
+                        <ul class= "unordered-list" style="color: #AAB1B7;" >
+                        <li>Creativity and originality</li>
+                        <li>Relevance to theme</li>
+                        <li>Production quality</li>
+                    </ul>
+                    <br>
+                    <br>
+                    <h3>Registration Fees</h3>
+                    <p>₹150 per Team</p> 
+                    </div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >ShreeKrishna:  797-501-1137</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Bhuvan Kalal: 854-986-1832</p>
                     </div>
 
                 </div>
