--- a/Events.html
+++ b/Events.html
@@ -202,21 +202,11 @@
                                 </div>
                             </div>
                         </div>
+                        
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="sharktank.html"><img src="img/performer/shark.png" alt=""></a>
-                                </div>
-                                <div class="performer_heading">
-                                    <h4>Shark Tank</h4>
-                                    <span>EC Department</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div data-tilt class="thumb">
-                                    <a href="modeling.html"><img src="img/performer/model.png" alt=""></a>
+                                    <a href="modeling.html"><img src="img/performer/modeling.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>3D Modelling</h4>
@@ -227,7 +217,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="roundtable.html"><img src="img/performer/roundtable.png" alt=""></a>
+                                    <a href="roundtable.html"><img src="img/performer/round.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Round Table</h4>
@@ -260,7 +250,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="treasurehunt.html"><img src="img/performer/tresure.png" alt=""></a>
+                                    <a href="treasurehunt.html"><img src="img/performer/treasure.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Treasure Hunt</h4>
@@ -363,7 +353,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="superminute.html"><img src="img/performer/minute.png" alt=""></a>
+                                    <a href="superminute.html"><img src="img/performer/superminute.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Super Minute</h4>
@@ -419,7 +409,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="Shakti Pradarshan.html"><img src="img/performer/tug.png" alt=""></a>
+                                    <a href="Shakti Pradarshan.html"><img src="img/performer/tug.jpg" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Tug Of War</h4>
@@ -463,7 +453,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="sidefootball.html"><img src="img/performer/football.png" alt=""></a>
+                                    <a href="sidefootball.html"><img src="img/performer/side.png" alt=""></a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>6 Side Football</h4>
