--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/IMG_20240319_144556886_3-z33YQ-iyh-transformed.jpeg" alt="">
+                                    <img src="img/performer/amaan.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Sayeed Amaan s</h4>
@@ -119,7 +119,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div  class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/2.png" alt="">
+                                    <img src="img/performer/yash.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Yash Mirashi</h4>
@@ -131,7 +131,7 @@
                         <div class="col-lg-6 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div  data-tilt class="thumb">
-                                    <img src="img/performer/3.png" alt="">
+                                    <img src="img/performer/vaish.png" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Vaishnavi R B</h4>
@@ -143,10 +143,10 @@
                         <div class="col-lg-6 col-md-6">
                             <div   class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/performer/4.png" alt="">
+                                    <img src="img/performer/yashodeep.png" alt="">
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Rohit Jadhav</h4>
+                                    <h4>Yashodeep Tammannavar</h4>
                                     <p>Graphic Designer</p>
                                     <span>6th sem, Artificial Intelligence and Data Science</span>
                                 </div>
