--- a/contact.html
+++ b/contact.html
@@ -94,35 +94,48 @@
     <!-- bradcam_area end -->
 
     <!-- ================ contact section start ================= -->
-    <section class="contact-section">
+    <section class="contact-section ">
             <div class="container text-center  wow fadeInRight">
-                <div class="row">
-                    <div class="section_title">
+                    <div class="section_title text-center">
                         <h3 >Get in Touch</h3>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-home"></i></span>
-                            <div class="section_title">
-                                <h4>AITM,Savagaon Road, Belagavi, Karnataka.</h4>
+                        <span class="contact-info__icon"><i class="ti-home"></i></span>
+                            <div class="section_title text-center">
+                                <h4 style="color:#1f0902 ;">AITM,Savagaon Road, Belagavi, Karnataka.</h4>
                                 <a href="https://aitmbgm.ac.in/"><p>aitmbgm.ac.in</p></a>
                             </div>
-                        </div>
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-                            <div class="section_title">
-                                <h4>+1 253 565 2365</h4>
+                        
+                            <div class="section_title text-center">
+                                <h3>Coordinators</h3>
+                                <h4 style="color:#1f0902 ;">AI & DS:</h4>
+                                <p>Sayeed Amaan: 9019888136</p>
+                                <p>Deepa B: 77607621571</p>
+                                <h4 style="color:#1f0902 ;">CSE:</h4>
+                                <p>Nagesh T: 6360047487</p>
+                                <p>Khushi: 8904793264</p>
+                                <h4 style="color:#1f0902 ;">CIVIL:</h4>
+                                <p>Rohit: 9880857398</p>
+                                <p>Tulsi: 6364030716</p>
+                                <h4 style="color:#1f0902 ;">ECE:</h4>
+                                <p>Sourabh P: 8746953768</p>
+                                <p>Varshini J: 9686731950</p>
+                                <h4 style="color:#1f0902 ;">E&E:</h4>
+                                <p>Rohit: 9880857398</p>
+                                <p>Tulsi: 6364030716</p>
+                                <h4 style="color:#1f0902 ;">Mechanical:</h4>
+                                <p>Manjunath G: 63606354198</p>
+                                <p>Sanddep D: 9731273961</p>
+                                <h4 style="color:#1f0902 ;">Robotics:</h4>
+                                <p>Ayush P: 7204785532</p>
+                                <p>Tejashwini Y: 7483432875</p>
+                                <h4 style="color:#1f0902 ;">MCA:</h4>
+                                <p>Santosh Y: 7760417600</p>
+                                <p>Suraksha B: 7204793419</p>
+                                <h4 style="color:#1f0902 ;">MBA:</h4>
+                                <p>Mrunal P: 9130810958</p>
+                                <p>Aishwarya A: 9164097160</p>
                             </div>
-                        </div>
-                        <div class="media contact-info">
-                            <span class="contact-info__icon"><i class="ti-email"></i></span>
-                            <div class="section_title">
-                                <h4>support@colorlib.com</h4>
-                                <p>Send us your query anytime!</p>
-                            </div>
-                        </div>
                     </div>
-                </div>
+                
             </div>
         </section>
     <!-- ================ contact section end ================= -->
