--- a/modeling.html
+++ b/modeling.html
@@ -101,33 +101,31 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" > Competitors will model small objects within a designated time period. Entrants will calculate volume and distance checks of the objects modeled. The time limit will vary from 1 - 1.5 hours.
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li>Student must carry a valid college ID card</li>
+                        <li>Three hours will be allotted for the selected candidate in order to complete their designs</li>
+                        <li>Participant should not use any electronic accessories inside a venue hall.</li>
+                        <li>Flow of event.</li>
+                        <li>Design a given 2D model in to 3D model by using AUTOCAD or Solid Edge.</li>
+                        <li>Maximum 2 participants per team.</li>
+                        <li>Model will be given at the time of competition.</li>
+                        <li>The final result will be judged on the basis of completeness and optimum time.  </li>
+                        <li>Top 3 team will be awarded with handsome prize and merit certificate </li>
+                        <li>TFor any clarification or further details, the interested candidate can conduct the event organizer. </li>
+
                     </ul></div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Aniket Kolkar- 8310234638</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Yusuf Tondikhan- 9964707269</p>
                     </div>
 
                 </div>
@@ -144,8 +142,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfsRt_iloWkNmBqxhF5t5S6IL7x4AvY34jLCrLmiL4jVUqK1g/viewform?embedded=true" width="640" height="1753" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
-                </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfsRt_iloWkNmBqxhF5t5S6IL7x4AvY34jLCrLmiL4jVUqK1g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                </div>
             </div>
           
         </div>
