--- a/murdermystery.html
+++ b/murdermystery.html
@@ -27,7 +27,7 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
-<body class="valobody">
+<body class="aboutbody">
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
@@ -85,7 +85,7 @@
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
                           <div class="bradcam_text text-center">
-                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Valorant</h3>
+                                <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Murder Mystery</h3>
                                 <a href="#register" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Register Now</a>
                           </div>
                        </div>
@@ -101,33 +101,27 @@
                 <div class="col-lg-12">
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Event Details</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >Join us for an epic and thrilling battle in virtual reality VALORANT at our battle field in our collage fest 
-                            VENCER-2k24. Gather your teams, strategize and ready to fight and witness for an intense battle 
-                            between the players. Show your skills to the others and reach to the Victory in VALORANT battle.
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" style="text-align:justify;" >A competation to “unravel the secrets of a luxurious mansion in our immersive murder mystery game. Assume the role of detective or suspect as you navigate through a web of lies, deceit, and intrigue. With each clue, suspicion mounts, and tensions rise. Can you solve the mystery before the killer strikes again?”
                         </p>
                         <h3>Rules</h3>
                         
                     </div>
                     <div class="section_title mb-80  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <ul class= "unordered-list" style="color: #AAB1B7;" >
-                        <li>Team should consist of 5 members </li>
-                        <li>Players should carry their own setup for the tournament </li>
-                        <li>Internet will be provided at the battle field  (players should come with backup with the internet)</li>
-                        <li>No substitutes are allowed </li>
-                        <li>College  identity cards are compulsory (all should be from one college) </li>
-                        <li>Once the tournament starts, team cannot replace any player</li>
-                        <li>Maps will  be decided through the toss at the battle field</li>
-                        <li>Team leader should provide their whatsapp number while registration</li>
-                        <li>Spot registration is available for limited time </li>
-                        <li>The coordinator's decision will be the final decision</li>
-                        <li>For further enquiry contact coordinators </li>
+                        <li>Team must consist of max 2 or min 4 </li>
+                        <li>Team name should be decent </li>
+                        <li>Team should be familiar with collage campus</li>
+                        <li>No electrical devices are allowed ( smart watches, phones, Bluetooth)</li>
+                        <li>The game will be conducted in 4 rounds</li>
+                        <li>The first round requires a team to solve a test paper to qualify for the next round</li>
+                        <li>Familarity with the collage campus will help you in the game</li>
                     </ul></div>
                     <div class="section_title text-center  wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">
                         <h3>Coordinators</h3>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Atif Mulla:  917-583-9057</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Gauri Naik: 86603678516</p>
                         <br>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Rohit Jadhav: 741-159-6115</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s" >Jay patil: 8618330159</p>
                     </div>
 
                 </div>
@@ -144,8 +138,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eeEvIhDpyq5FjXzHGmnjq1UZheV0Jdjwcmj9ncjgjQBo5Q/viewform?embedded=true" width="640" height="1367" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        
-                        </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf-y_M36PYXWMbFXhtS31esI80IpAeCkJTdqe2tBDp4OXISeQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                        </div>
                 </div>
             </div>
           
