--- a/valorant.html
+++ b/valorant.html
@@ -27,7 +27,7 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
-<body class="valobody">
+<body class="valorantbody">
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
@@ -80,7 +80,7 @@
 
      <!-- bradcam_area -->
      <div class="bradcam_area">
-        <div class="single_bradcam  d-flex align-items-center bradcam_bg_valo overlay">
+        <div class="single_bradcam  d-flex align-items-center bradcam_bg_val overlay">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
                        <div class="col-xl-12">
