--- a/index.html
+++ b/index.html
@@ -140,39 +140,39 @@
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Mask Of Logic</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/performer/" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/mask.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">AI & DS</h4>
                             </div>
                         </div>`
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Artbotics</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/artbotics.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CSE</h4>
                             </div>
                         </div>
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Treasure Hunt</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/treasure.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">MCA</h4>
                             </div>
                         </div>
                         
@@ -195,52 +195,52 @@
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Valorant</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/valo.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">AI & DS</h4>
                             </div>
                         </div>
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Gaana Sudhe</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/gaan.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CSE</h4>
                             </div>
                         </div>
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Chayachitra</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/chaya.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CSE</h4>
                             </div>
                         </div>
                         <div class="single_propram">
                             <div class="inner_wrap">
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Event Name</span>
+                                    <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Catch Me IF You Can</span>
                                     <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a href="Events.html"><img src="img/program_details/1.png" alt=""></a>
+                                    <a href="Events.html"><img src="img/performer/catchme.png" alt=""></a>
                                 </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Dept Name</h4>
+                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CSE</h4>
                             </div>
                         </div>
                         
