--- a/throwball.html
+++ b/throwball.html
@@ -142,8 +142,7 @@
                     <div class="section_title ">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Fill the Form to Register</h3>
                         <div class="row justify-content-center responsive-iframe-container">
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSedRSrz1eh43K-h8UsGyb8yaxKxy1liOKTFkHiN-wh39KSzaA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>     
-                         </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSedRSrz1eh43K-h8UsGyb8yaxKxy1liOKTFkHiN-wh39KSzaA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>                         </div>
                 </div>
             </div>
           
