--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Scavenger Hunt</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/scavenger.png" alt=""></a>
@@ -141,7 +141,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Mask Of Logic</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/mask.png" alt=""></a>
@@ -154,7 +154,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Artbotics</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/artbotics.png" alt=""></a>
@@ -167,7 +167,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Treasure Hunt</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/treasure.png" alt=""></a>
@@ -196,7 +196,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Valorant</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/valo.png" alt=""></a>
@@ -209,7 +209,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Gaana Sudhe</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/gaan.png" alt=""></a>
@@ -222,7 +222,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Chayachitra</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/chaya.png" alt=""></a>
@@ -235,7 +235,7 @@
                                 <div class="circle_img"></div>
                                 <div class="porgram_top">
                                     <span class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Catch Me IF You Can</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">10:00-12:00 am</h4>
+                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s"></h4>
                                 </div>
                                 <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                     <a href="Events.html"><img src="img/performer/catchme.png" alt=""></a>
